Closed Bug 812107 Opened 12 years ago Closed 12 years ago

Graphical glitch in print preview when scroll

Categories

(Core :: Print Preview, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla20
Tracking Status
firefox19 + verified
firefox20 --- verified
firefox-esr17 --- unaffected

People

(Reporter: alice0775, Assigned: mattwoodrow)

References

Details

(Keywords: regression)

Attachments

(2 files)

Attached image screen shot
Build Identifier:
http://hg.mozilla.org/mozilla-central/rev/87928cd21b40
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/19.0 Firefox/19.0 ID:20121114102936

This is very similar Bug 794709, but this is recent regression.
This problem only happens in print preview.

Steps to reproduce:
 1. Open long page such as https://developer.mozilla.org/en-US/docs/Firefox_4_for_developers
 2. Print Preview (Alt > File > Print Preview)
 3. Scroll Up/Down

Actual results:
 Gray area appears at bottom of screen
 Text disappears from bottom of screen
 As page scrolls down, the range spreads out

Expected results:
 No such problem

Regression window(m-c)
Good:
http://hg.mozilla.org/mozilla-central/rev/fc1684f4d3a9
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/19.0 Firefox/19.0 ID:20121114044850
Bad:
http://hg.mozilla.org/mozilla-central/rev/87928cd21b40
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/19.0 Firefox/19.0 ID:20121114102936
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=fc1684f4d3a9&tochange=87928cd21b40

Regression window(m-i)
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/2b66b88a0b0f
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/19.0 Firefox/19.0 ID:20121113221949
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/24c0c55af0ed
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/19.0 Firefox/19.0 ID:20121113222650
Pushlog;
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=2b66b88a0b0f&tochange=24c0c55af0ed

Suspected: Bug 811570
Screen capture http://youtu.be/3230eG-jdns
This problem happesn in Linux too. However, the glitch begins from the upper part of screen.

http://hg.mozilla.org/mozilla-central/rev/87928cd21b40
Mozilla/5.0 (X11; Linux i686; rv:19.0) Gecko/19 Firefox/19.0a1 ID:20121114102936
OS: Windows 7 → All
Assignee: nobody → matt.woodrow
Summary: Graphical glitch in prnt preview when scroll → Graphical glitch in print preview when scroll
Triggered by:
1cfa8c4279e5	Matt Woodrow — Bug 810186 - Don't unnecessarily nest inactive layers. r=roc
Blocks: 810186
No longer blocks: 811570
Blocks: 814915
No longer blocks: 814915
I see this on Linux64, both on Firefox Nightly 20.0a1 and on SeaMonkey 2.17a1 but not on Firefox 17.0esrpre. See Build IDs and changeset IDs in bug 817214 comment #0
Hardware: x86 → All
Version: 19 Branch → Trunk
In this case we had two nested transforms (nsSimplePageSequence and nsPageFrame). The outer one was setting a scale.

The scroll offset code wasn't adjusting for the scale on the container and content within it ends up in the wrong place. This doesn't happen for content, because transformed frames are normally the reference frame, so we don't need scroll compensation.

I think it's easiest to just not bother here. Maybe making the transforms created for print preview reference frames would be worth it, since we'll probably be invalidating more than we need to now.
Attachment #688052 - Flags: review?(roc)
https://hg.mozilla.org/mozilla-central/rev/54f08a854e4e
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
Mozilla/5.0 (X11; Linux x86_64; rv:20.0) Gecko/20121204 Firefox/20.0 ID:20121204174201 CSet: 1942b4d64dc8

Mozilla/5.0 (X11; Linux x86_64; rv:20.0) Gecko/20100101 Firefox/20.0 SeaMonkey/2.17a1 ID:20121204121822 c-c:1c212e41559a m-c:e8f0504ccbb9

Neither of these hourlies exhibit the bug.
I cannot test on Mac or Windows (I only have this Linux machine).

Please test Windows builds of Fx20 and Sm2.17a1 and if OK, set VERIFIED and verified-Fx20. Then it will be time to evaluate the need (or not) for approval-mozilla-aurora.
I cannot reproduce the problem anymore in the following Firefox&SeaMonkey win32 build.

http://hg.mozilla.org/mozilla-central/rev/1942b4d64dc8
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:20.0) Gecko/20121204 Firefox/20.0 ID:20121204174201

http://hg.mozilla.org/comm-central/rev/1c212e41559a
http://hg.mozilla.org/mozilla-central/rev/1942b4d64dc8
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:20.0) Gecko/20100101 Firefox/20.0 SeaMonkey/2.17a1 ID:20121204174222
Setting VERIFIED on the basis of comment #11 and 12.

If you (anyone) still see the bug in a nightly or hourly containing mozilla-central changeset 54f08a854e4e please post a comment with the details.
Status: RESOLVED → VERIFIED
Keywords: verifyme
Blocks: 818269
No longer blocks: 818269
Since this is verified, please nominate for Aurora uplift.
Comment on attachment 688052 [details] [diff] [review]
Don't attempt to do scroll compensation for nsDisplayTransform

[Approval Request Comment]
Bug caused by (feature/regressing bug #): Bug 811570
User impact if declined: Broken scrolling in print preview.
Testing completed (on m-c, etc.): Been on m-c for a while
Risk to taking this patch (and alternatives if risky): Low risk, reverts back to previous behaviour in some cases.
String or UUID changes made by this patch: None
Attachment #688052 - Flags: approval-mozilla-aurora?
Attachment #688052 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Depends on: 820496
Depends on: 821995
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/20100101 Firefox/19.0
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:19.0) Gecko/20100101 Firefox/19.0
Mozilla/5.0 (X11; Linux i686; rv:19.0) Gecko/20100101 Firefox/19.0


Works for me on Firefox 19 beta 5 (Build ID: 20130206083616) following STR from comment 0.
Just discovered this bug on 23.0a1 (2013-04-13)
Should I re-open this bug or create a new one? 
(Didn't find page containing reporting rules; if any...)
Open a new one, please.
(In reply to Pierre Fortin from comment #19)
> Just discovered this bug on 23.0a1 (2013-04-13)
> Should I re-open this bug or create a new one? 
> (Didn't find page containing reporting rules; if any...)

I think you should report a new bug, with the "regression" keyword, and mention in its Description that this bug seems to have happened again. You could also add Matt Woodrow to its CC.

Bug reporting guidelines start at https://developer.mozilla.org/en-US/docs/Mozilla/QA/Bug_writing_guidelines and continue on pages linked (recursively) from there.
(In reply to Pierre Fortin from comment #19)
> Just discovered this bug on 23.0a1 (2013-04-13)
> Should I re-open this bug or create a new one? 
> (Didn't find page containing reporting rules; if any...)

maybe Bug 860253
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: