Bug 812107 - Don't attempt to do scroll compensation in FrameLayerBuilder for transformed containers. r=roc